--- a/Lesson2-HTML-CSS/homework/styles.css
+++ b/Lesson2-HTML-CSS/homework/styles.css
@@ -1,14 +1,22 @@
 
             h1{color:pink;}
-            img{width:400px;}
-            #thirdDiv{height:600px;
-                      width:500px;
+            img{width:250px;
+                
+            }
+            #thirdDiv{
+                      width:300px;
                       background:green;
                       padding:50px;
                       border:solid blue;
+                      
             }
             #spanId{font-size:18px;
                     margin:50px;
 
             }
-        
+            .divClass{
+                align-content: center;
+
+            }
+            body{
+background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTy0lO1bPdGEKa-AJMhm8vYPdD15567rgmleaY1Z7DB0syYEnpb");
